# poblado

./: .gitignore  CMakeLists.txt  Makefile  README.md  package.json  rapidjson-writable.cmake  rapidjson-writable.mk  uv.mk
include/: poblado.h
test/: common.h  poblado.js  test_capitalize.cc  test_dump.cc
test/fixtures/: capitals.json  error.incomplete-quote.json
